--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,12 @@
   </head>
 
   <body>
-    <div class="container">
+    <%= render 'layouts/header' %>
+    
+    <main class="container">
       <%= yield %>
-    </div>
+    </main>
+
+    <%= render 'layouts/footer' %>
   </body>
 </html>
