--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,6 +1,6 @@
 <table class="table">
   <tr>
-    <%= attachment_image_tag user, :profile_image, :fill, 100, 100, fallback: 'no-image.jpg' %>
+    <%= attachment_image_tag user, :profile_image, :fill, 100, 100, fallback: 'no-image.jpg', size:'100x100' %>
   </tr>
   <tr>
     <th>name</th>
