--- a/app/views/books/_new.html.erb
+++ b/app/views/books/_new.html.erb
@@ -10,6 +10,6 @@
   </div>
   
   <div class="form-group">
-    <%= f.submit 'Create Book', class:'btn btn-primary btn-block' %>
+    <%= f.submit class:'btn btn-primary btn-block' %>
   </div>
 <% end %>
