--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,7 +18,7 @@
       </div>
       
       <div class="form-group">
-        <%= f.submit 'Create Book', class:'btn btn-primary btn-block' %>
+        <%= f.submit class:'btn btn-primary btn-block' %>
       </div>
     <% end %>
   </div>
