viewのlinke_toのパスの.idを省略

--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -11,4 +11,4 @@
     <td><%= user.introduction %></td>
   </tr>
 </table>
-<%= link_to '', edit_user_path(user.id), class:'btn btn-default btn-block glyphicon glyphicon-wrench' %>
+<%= link_to '', edit_user_path(user), class:'btn btn-default btn-block glyphicon glyphicon-wrench' %>
