--- a/app/views/books/_new.html.erb
+++ b/app/views/books/_new.html.erb
@@ -5,7 +5,7 @@
   </div>
   
   <div class="form-group">
-    <%= f.label :body, class:'control-label' %>
+    <%= f.label :body, 'Opinion', class:'control-label' %>
     <%= f.text_area :body, class:'form-control input-sm' %>
   </div>
   
