--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,7 +24,7 @@
               <%= link_to 'Edit', edit_book_path(@book), class:'btn btn-success btn-sm' %>
             </td>
             <td>
-              <%= link_to 'Destroy', book_path(@book), method: :delete, class:'btn btn-danger btn-sm' %>
+              <%= link_to 'Destroy', book_path(@book), method: :delete, data: {confirm: '本当に消しますか?'}, class:'btn btn-danger btn-sm' %>
           </td>
           <% end %>
 
