--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,15 +14,15 @@
       <div class="collapse navbar-collapse navbar-right" id="navbarEexample">
         <ul class="nav navbar-nav">
           <% if user_signed_in? %>
-            <li><%= link_to ' Home', '', class:'glyphicon glyphicon-home' %></li>
-            <li><%= link_to ' User', '', class:'glyphicon glyphicon-user' %></li>
-            <li><%= link_to ' Books', '', class:'glyphicon glyphicon-book' %></li>
-            <li><%= link_to ' logout', '', class:'glyphicon glyphicon-log-out' %></li>
+            <li><%= link_to ' Home', user_path(current_user), class:'glyphicon glyphicon-home' %></li>
+            <li><%= link_to ' Users', users_path, class:'glyphicon glyphicon-user' %></li>
+            <li><%= link_to ' Books', books_path, class:'glyphicon glyphicon-book' %></li>
+            <li><%= link_to ' logout', destroy_user_session_path, method: :delete, class:'glyphicon glyphicon-log-out' %></li>
           <% else %>
-            <li><%= link_to ' Home', '', class:'glyphicon glyphicon-home' %></li>
-            <li><%= link_to ' About', '', class:'glyphicon glyphicon-link' %></li>
-            <li><%= link_to ' sign up', '', class:'glyphicon glyphicon-edit' %></li>
-            <li><%= link_to ' login', '', class:'glyphicon glyphicon-log-in' %></li>
+            <li><%= link_to ' Home', root_path, class:'glyphicon glyphicon-home' %></li>
+            <li><%= link_to ' About', home_about_path, class:'glyphicon glyphicon-link' %></li>
+            <li><%= link_to ' sign up', new_user_registration_path, class:'glyphicon glyphicon-edit' %></li>
+            <li><%= link_to ' login', new_user_session_path, class:'glyphicon glyphicon-log-in' %></li>
           <% end %>
         </ul>
       </div>
