--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-3">
     <h2>User info</h2>
-    <%= render 'users/info', user: @user %>
+    <%= render 'users/info', user: current_user %>
     
     <h2>New book</h2>
     <%= render 'books/new', book: Book.new %>
