--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-md-offset-3 col-md-6">
     <h2>Editing　Book</h2>
+    <%= render 'layouts/errors_messages', errors: @book %>
     <%= form_for(@book) do |f| %>
       <div class="form-group">
         <%= f.label :title, class:'control-label' %>
