--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,11 @@
+<%= render 'layouts/errors_messages', errors: @book %>
 <div class="row">
   <div class="col-md-3">
     <h2>User info</h2>
     <%= render 'users/info', user: current_user %>
     
     <h2>New book</h2>
-    <%= render 'books/new', book: Book.new %>
+    <%= render 'books/new', book: @book %>
   </div>
 
   <div class="col-md-9">
