--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-md-3">
     <h2>User info</h2>
+    <%= render 'layouts/errors_messages', errors: @user %>
     <%= form_for(@user) do |f| %>
       <div class="form-group">
         <%= f.label :name, class:'control-label' %>
