--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-offset-3 col-md-6">
+  <div class="col-md-offset-3">
     <h2>Editing　Book</h2>
     <%= render 'layouts/errors_messages', errors: @book %>
-    <%= form_for(@book) do |f| %>
+    <%= form_for(@book, html: { class:'col-md-6' }) do |f| %>
       <div class="form-group">
         <%= f.label :title, class:'control-label' %>
         <%= f.text_field :title, class:'form-control input-sm' %>
@@ -17,11 +17,10 @@
         <%= f.submit class:'btn btn-primary btn-block' %>
       </div>
     <% end %>
-    <div>
+    <div class="col-md-12">
       <%= link_to 'Show', book_path(@book) %>
       <span>|</span>
       <%= link_to 'Back', books_path %>
     </div>
-
   </div>
 </div>
