--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <%= render 'layouts/header' %>
     
     <main class="container">
+      <p class="text-success"><%= notice %></p>
       <%= yield %>
     </main>
 
