--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'layouts/errors_messages', errors: @book %>
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-xs-3">
     <h2>User info</h2>
     <%= render 'users/info', user: current_user %>
     
@@ -8,7 +8,7 @@
     <%= render 'books/new', book: @book %>
   </div>
 
-  <div class="col-md-9">
+  <div class="col-xs-9">
     <h2>Books</h2>
     <%= render 'books/table', books: @books %>
   </div>
