--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-xs-3">
     <h2>User info</h2>
     <%= render 'users/info', user: @user %>
     <h2>New book</h2>
     <%= render 'books/new', book: Book.new %>
   </div>
 
-  <div class="col-md-9">
+  <div class="col-xs-9">
     <h2>Users</h2>
     <%= render 'users/table', users: @users %>
   </div>
