--- a/app/views/books/_table.html.erb
+++ b/app/views/books/_table.html.erb
@@ -1,6 +1,6 @@
 <table class="table table-hover">
   <thead>
-    <tr><th></th><th>Title</th><th>Opinion</th></tr>
+    <tr><th></th><th>Title</th><th>Opinion</th><th></th><th></th></tr>
   </thead>
   <tbody>
     <% books.each do |book| %>
@@ -27,6 +27,7 @@
         <% end %>
       </td>
       <% end %>
+      <td>コメント数：<%= book.book_comments.count %></td>
     </tr>
     <% end %>
   </tbody>
