--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -34,6 +34,7 @@
           <% end %>
         </td>
         <% end %>
+        <td>コメント数：<%= @book.book_comments.count %></td>
         <% if @book.user == current_user %>
           <td>
             <%= link_to 'Edit', edit_book_path(@book), class:'btn btn-success btn-sm' %>
@@ -44,5 +45,19 @@
         <% end %>
       </tr>
     </table>
+    <div>
+      <div>
+        <% @book_comments.each do |book_comment| %>
+          <div><%= book_comment.comment %></div>
+          <% if book_comment.user == current_user %>
+            <%= link_to '削除', book_book_comment_path(book_comment.book, book_comment), method: :delete, class:'btn btn-danger' %>
+          <% end %>
+        <% end %>
+      </div>
+      <%= form_for [@book, @book_comment] do |f| %>
+        <%= f.text_area :comment, class:'form-control input-sm', placeholder:'コメントをここに' %>
+        <%= f.submit class:'btn btn-info' %>
+      <% end %>
+    </div>
   </div>
 </div>
