--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -37,26 +37,41 @@
         <td>コメント数：<%= @book.book_comments.count %></td>
         <% if @book.user == current_user %>
           <td>
-            <%= link_to 'Edit', edit_book_path(@book), class:'btn btn-success btn-sm' %>
+            <%= link_to 'Edit', edit_book_path(@book), class:'btn btn-success btn-xs' %>
           </td>
           <td>
-            <%= link_to 'Destroy', book_path(@book), method: :delete, data: {confirm: '本当に消しますか?'}, class:'btn btn-danger btn-sm' %>
+            <%= link_to 'Destroy', book_path(@book), method: :delete, data: {confirm: '本当に消しますか?'}, class:'btn btn-danger btn-xs' %>
           </td>
         <% end %>
       </tr>
     </table>
     <div>
-      <div>
-        <% @book_comments.each do |book_comment| %>
-          <div><%= book_comment.comment %></div>
+      <h3>コメント数：<%= @book.book_comments.count %></h3>
+      <table class="table">
+      <% @book_comments.each do |book_comment| %>
+        <tr>
+          <td>
+            <%= attachment_image_tag book_comment.user, :profile_image, :fill, 40, 40, fallback:'no-image.jpg', size:'40x40' %>
+            <br>
+            <%= book_comment.user.name %>
+          </td>
+          <td><%= book_comment.comment %></td>
           <% if book_comment.user == current_user %>
-            <%= link_to '削除', book_book_comment_path(book_comment.book, book_comment), method: :delete, class:'btn btn-danger' %>
+            <td><%= link_to 'Destroy', book_book_comment_path(book_comment.book, book_comment), method: :delete, class:'btn btn-danger btn-xs' %></td>
+          <% else %>
+            <td></td>
           <% end %>
-        <% end %>
-      </div>
+        <tr>
+      <% end %>
+      </table>
       <%= form_for [@book, @book_comment] do |f| %>
-        <%= f.text_area :comment, class:'form-control input-sm', placeholder:'コメントをここに' %>
-        <%= f.submit class:'btn btn-info' %>
+        <div class="form-group">
+          <%= f.label :comment, 'コメント', class:'control-label' %>
+          <%= f.text_area :comment, class:'form-control input-sm', placeholder:'コメントをここに' %>
+        </div>
+        <div class="form-group">
+          <%= f.submit class:'btn btn-primary btn-sm pull-right' %>
+        </div>
       <% end %>
     </div>
   </div>
